--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@ h4, p{font-size: 16px;margin-bottom: 20px;}
     width: 100%;
     height: 50px;
     box-shadow: 0.2rem 0.2rem 0.5rem var(--rosso-scuro);
-    position: absolute;
+    position: fixed;
     z-index: 300;
 }
 .navbar-links{
