--- a/src/App.css
+++ b/src/App.css
@@ -108,12 +108,17 @@ h4, p{font-size: 16px;margin-bottom: 20px;}
 
 /*! navbar */
 /* navbar */
+.fissa {
+    position: fixed;
+    top: 0;
+  }
+  
 .navbar{
     background-color: var(--arancio);
     width: 100%;
     height: 50px;
     box-shadow: 0.2rem 0.2rem 0.5rem var(--rosso-scuro);
-    position: fixed;
+    position: absolute;
     z-index: 300;
 }
 .navbar-links{
