--- a/src/App.css
+++ b/src/App.css
@@ -165,9 +165,25 @@ h4, p{font-size: 16px;margin-bottom: 20px;}
 
 /* !section-2 */
 .section-2{
-    width: 100%;height: 100vh;
+    width: 100%;
     background-color: white;
     display:flex;flex-direction: column;align-items: center;
+}
+.icone{
+    padding: 0 2rem;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.icone_testo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.icone_testo p{
+    font-size: 1.3rem;
+    font-weight: 700;
+    letter-spacing: .1rem;
 }
 
 .barra{
