--- a/src/App.css
+++ b/src/App.css
@@ -120,6 +120,11 @@ h4, p{font-size: 16px;margin-bottom: 20px;}
     box-shadow: 0.2rem 0.2rem 0.5rem var(--rosso-scuro);
     position: absolute;
     z-index: 300;
+    opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+.navbar.show{
+    opacity: 1;
 }
 .navbar-links{
     font-size: 20px;
