--- a/src/App.css
+++ b/src/App.css
@@ -88,7 +88,7 @@ h4, p{font-size: 16px;margin-bottom: 20px;}
 .nome-persona{
     color: var(--nero);
     text-transform: uppercase; letter-spacing: 8px;
-    
+    text-align: center;
 }
 
 
@@ -236,7 +236,6 @@ h4, p{font-size: 16px;margin-bottom: 20px;}
     }
     .stile-progetti{
         width: 100%;
-        height: 250px;
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
@@ -454,7 +453,6 @@ h4, p{font-size: 5px;margin-bottom: 10px;} */
     }
     .stile-progetti {
         width: 100%;
-        height: 350px;
     }
 
 }
@@ -481,7 +479,6 @@ h1 {
 }
 .stile-progetti {
     width: 100%;
-    height: 300px;
 }
 .copyright {
     font-size: 10px;
@@ -492,7 +489,7 @@ h1 {
 .titolo{font-size: 22px;}
 .nome-persona{font-size: 11px;}
 .barra {width: 300px;margin: 8px 0;}
-.stile-progetti {width: 100%; height: 190px;}
+.stile-progetti {width: 100%;}
 .img-progetto {width: 220px;}
 .copyright {font-size: 8px;}
 .navbar{display:none;}
