--- a/src/App.css
+++ b/src/App.css
@@ -142,7 +142,7 @@ h4, p {
 /* !section-1 home*/    
 .header {
     width: 100%;
-    height: 100vh;
+    height: 100svh;
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -374,9 +374,8 @@ h4, p {
         }
     }
     .header {
-        width: 100%;
         height: 100%;
-        margin-top: 80px;
+        /* margin-top: 80px; */
         display: flex;
         justify-content: center;
         align-items: center;
@@ -443,10 +442,8 @@ h4, p {
         }
     }
     .header {
-        display: flex;
-        justify-content: center;
+        height: 100%;
         margin-top: 80px;
-        align-items: center;
          & .wrap-grid{
             
             grid-template-columns: 1fr ;
@@ -461,6 +458,7 @@ h4, p {
         width: 230px;
         height: 230px;
         border-radius: 50px;
+        margin-bottom: 100px;
     }
         /* fine home */
 
@@ -508,12 +506,7 @@ h4, p {
         }
     }
     .header {
-        width: 100%;
         height: 100%;
-        margin-top: 100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
          & .wrap-grid{
             display: grid;
             gap: 10px;
@@ -558,6 +551,7 @@ h4, p {
 }
 
 @media screen and (min-width: 601px) and (max-width: 768px) {
+    .menu{display: none;}
     .testo{
         & h1{
             font-size: 38px;
