--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,9 +1,8 @@
 .logo{
-
-    & img{
-        width: 64px; height: 64px;
-        
-    }
+    width: 64px; height: 64px;
+}
+.logo img{
+    width: 64px; height: 64px;
 }
 /*! navbar */
 /* navbar */
@@ -26,9 +25,11 @@
     justify-content: center;
     align-items: center;
 
-    & div {
-        justify-content: space-between;
-    }
+
+}
+.navbar > div{
+    justify-content: space-between;
+
 }
 
 .navbar-links {
@@ -75,10 +76,10 @@
     top: 80px;
     transition: all 1s cubic-bezier(.215, .61, .355, 1);
     z-index: 50;
-    & a{
-        font-size: 40px;
-        font-weight: bold;
-    }
+}
+.nav > a{
+    font-size: 40px;
+    font-weight: bold;
 }
 .nav.active{left: 0; z-index: 50;}
 
