--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ body, html {
   text-decoration: none;
   outline: none;
   scroll-behavior: smooth;
+  scroll-padding: 80px;
   color: white;
 }
 
