--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -1,8 +1,11 @@
 .logo{
-    width: 64px; height: 64px;
+    width: 64px; height: 64px;z-index: 100;
 }
 .logo img{
-    width: 64px; height: 64px;
+    width: 64px; height: 64px;z-index: 100;
+}
+.menu{
+    z-index: 100;
 }
 /*! navbar */
 /* navbar */
@@ -61,6 +64,7 @@
 
 /*! fine navbar */
 /* menu smartphone */
+
 .nav{
     width: 100%;
     height: 100vh;
@@ -73,7 +77,7 @@
     align-items: center;
     position: fixed;
     left: -100%;
-    top: 80px;
+    top: 0;
     transition: all 1s cubic-bezier(.215, .61, .355, 1);
     z-index: 50;
 }
