--- a/src/App.css
+++ b/src/App.css
@@ -202,13 +202,6 @@ h4, p {
     position: relative;
     overflow: hidden;
     transition: all 1s;
-    width: 500px; height: 700px;
-    background-size: cover;
-    
-    background-color: #222;
-}
-.progetto img{
-    background-size: cover;
 }
 .progetto:hover{
     transform: scale(1.1);
@@ -301,7 +294,7 @@ h4, p {
 /* !section-4 */
 .section-4 {
     width: 100%;
-    height: 80%;
+    height: 70vh;
     background-color: #555;
 }
 
