--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 /* ! Title System */
 h1 {
     font-size: 50px;
@@ -139,7 +138,7 @@ h4, p {
     --nero: #0D0D0D;
 }
 
-/* !section-1 home*/    
+/* !section-1 home*/
 .header {
     width: 100%;
     height: 100svh;
@@ -147,21 +146,21 @@ h4, p {
     justify-content: center;
     align-items: center;
 }
-.wrap-grid{
-    display: grid;
-    /* gap: 20%; */
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr ;
-    
- }
- .img{
 
- }
-.img-persona{
+.wrap-grid {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+
+}
+
+.img-persona {
     /* width: 355px;
     height: 355px; */
-    height: 355px;width: auto;
-    background-size:cover;
+    height: 355px;
+    width: auto;
+    background-size: cover;
 
     /* border-radius: 70px; */
     border-radius: 9999px;
@@ -181,8 +180,8 @@ h4, p {
     justify-content: center;
 }
 
-.section-2-progetti{
-    display: grid;    
+.section-2-progetti {
+    display: grid;
     grid-template-columns: repeat(2, 1fr);
     /* grid-template-rows: 1fr ; */
     gap: 50px;
@@ -195,7 +194,7 @@ h4, p {
     flex-wrap: wrap;
 }
 
-.progetto::before{
+.progetto::before {
     content: '';
     position: absolute;
     top: 0;
@@ -205,10 +204,12 @@ h4, p {
     height: 100%;
     z-index: -1;
 }
-.progetto:hover::before{
+
+.progetto:hover::before {
     opacity: 0.8;
     z-index: 1;
 }
+
 .progetto {
     margin: 10px;
     background-color: #131313;
@@ -217,7 +218,8 @@ h4, p {
     overflow: hidden;
     transition: all 1s;
 }
-.progetto:hover{
+
+.progetto:hover {
     transform: scale(1.1);
 }
 
@@ -256,7 +258,7 @@ h4, p {
     background-size: cover;
     transition: opacity 0.2s;
     transition: blur 0.2s;
-    
+
 }
 
 .progetto:hover .img-progetto {
@@ -270,7 +272,7 @@ h4, p {
     letter-spacing: 2px;
     color: white;
     text-shadow: 1px 1px 2px black;
-    border:solid 1px #222;
+    border: solid 1px #222;
     background: var(--rosso-scuro);
     border-radius: 70px;
     padding: 14px 28px;
@@ -326,8 +328,8 @@ h4, p {
     width: 25%;
 }
 
-.form > input,
-.form > textarea {
+.form>input,
+.form>textarea {
     width: 100%;
     padding: 10px;
     margin: 5px 0;
@@ -336,24 +338,26 @@ h4, p {
     color: black;
 }
 
-.form > textarea {
+.form>textarea {
     max-width: 100%;
     height: 70px;
     max-height: 140px;
 
 }
-.btn{
+
+.btn {
     font-size: 18px;
     font-weight: 700;
     letter-spacing: 2px;
-    color: white !important; 
+    color: white !important;
     text-shadow: 1px 1px 2px black;
     background: var(--rosso-scuro);
     border-radius: 70px;
     padding: 10px 20px;
     transition: all 1s;
 }
-.btn:hover{
+
+.btn:hover {
     background: var(--rosso);
 }
 
@@ -394,273 +398,325 @@ h4, p {
 /* !responsive  */
 @media screen and (max-width: 320px) {
 
-    .testo > h1{
+    .testo>h1 {
         font-size: 44px;
         line-height: normal;
     }
-    .testo > p{
+
+    .testo>p {
         font-size: 18px;
     }
-    .home-span{
+
+    .home-span {
         font-size: 13px;
     }
-    .home-btn{
+
+    .home-btn {
         padding: 1rem 1.5rem;
     }
+
     .header {
         height: 100%;
         /* margin-top: 80px; */
         display: flex;
         justify-content: center;
-        align-items: center;   
+        align-items: center;
     }
-    .wrap-grid{
+
+    .wrap-grid {
         display: grid;
         gap: 10px;
-        grid-template-columns: 1fr ;
-        grid-template-rows: 1fr ;
-        
-     }
-    .img{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+
+    }
+
+    .img {
         justify-content: center;
     }
-    .img-persona{
+
+    .img-persona {
         width: 230px;
         height: 230px;
         border-radius: 100%;
         margin-bottom: 100px;
     }
+
     /* fine home */
 
-    .section-2-progetti{
-        display: grid;    
+    .section-2-progetti {
+        display: grid;
         grid-template-columns: repeat(1, 1fr);
         /* grid-template-rows: 1fr ; */
         gap: 40px;
     }
+
     .titolo-progetto {
         font-size: 25px;
     }
-    
+
     .sottotitolo-progetto {
         font-size: 18px;
     }
+
     .link-progetto {
         font-size: 18px;
         padding: 10px 15px;
     }
-/* !section-4 */
 
-.titolo-section-4 {
-    font-size: 36px;
-}
+    /* !section-4 */
 
-.form {
-    width: 80%;
-}
+    .titolo-section-4 {
+        font-size: 36px;
+    }
 
-/* !fine section-4 */
+    .form {
+        width: 80%;
+    }
+
+    /* !fine section-4 */
 }
 
 @media screen and (min-width: 321px) and (max-width: 480px) {
-    .testo > h1{
+    .testo>h1 {
         font-size: 44px;
         line-height: normal;
     }
-    .testo > p{
+
+    .testo>p {
         font-size: 18px;
     }
-    .home-span{
+
+    .home-span {
         font-size: 13px;
     }
-    .home-btn{
+
+    .home-btn {
         padding: 1.2rem 1.5rem;
     }
+
     .header {
         height: 100%;
         margin-top: 80px;
     }
-    .wrap-grid{
-            
-        grid-template-columns: 1fr ;
-        grid-template-rows: 1fr ;
+
+    .wrap-grid {
+
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
         gap: 20px;
-     }
-    .img{
+    }
+
+    .img {
         justify-content: center;
     }
-    .img-persona{
+
+    .img-persona {
         width: 230px;
         height: 230px;
         border-radius: 100%;
         margin-bottom: 100px;
     }
-        /* fine home */
 
-        .section-2-progetti{
-            display: grid;    
-            grid-template-columns: repeat(1, 1fr);
-            /* grid-template-rows: 1fr ; */
-            gap: 40px;
-        }
-        .titolo-progetto {
-            font-size: 28px;
-        }
-        
-        .sottotitolo-progetto {
-            font-size: 18px;
-        }
-        .link-progetto {
-            font-size: 18px;
-            padding: 10px 15px;
-        }
-/* !section-4 */
+    /* fine home */
 
-.titolo-section-4 {
-    font-size: 36px;
-}
+    .section-2-progetti {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        /* grid-template-rows: 1fr ; */
+        gap: 40px;
+    }
 
-.form {
-    width: 70%;
-}
-/* !fine section-4 */
-    
+    .titolo-progetto {
+        font-size: 28px;
+    }
+
+    .sottotitolo-progetto {
+        font-size: 18px;
+    }
+
+    .link-progetto {
+        font-size: 18px;
+        padding: 10px 15px;
+    }
+
+    /* !section-4 */
+
+    .titolo-section-4 {
+        font-size: 36px;
+    }
+
+    .form {
+        width: 70%;
+    }
+
+    /* !fine section-4 */
+
 }
 
 @media screen and (min-width: 481px) and (max-width: 600px) {
-    .testo > h1{
+    .testo>h1 {
         font-size: 44px;
         line-height: normal;
     }
-    .testo > p{
+
+    .testo>p {
         font-size: 18px;
     }
-    .home-span{
+
+    .home-span {
         font-size: 14px;
     }
+
     .header {
         height: 100%;
     }
-    .wrap-grid{
+
+    .wrap-grid {
         display: grid;
         gap: 10px;
-        grid-template-columns: 1fr ;
-        grid-template-rows: 1fr ;
-        
-     }
-    .img{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+
+    }
+
+    .img {
         justify-content: center;
     }
-    .img-persona{
+
+    .img-persona {
         width: 355px;
         height: 355px;
         border-radius: 100%;
         margin-bottom: 100px;
     }
+
     /* fine home */
 
-    .section-2-progetti{
-        display: grid;    
+    .section-2-progetti {
+        display: grid;
         grid-template-columns: repeat(1, 1fr);
         /* grid-template-rows: 1fr ; */
         gap: 40px;
     }
+
     .titolo-progetto {
         font-size: 28px;
     }
-    
+
     .sottotitolo-progetto {
         font-size: 18px;
     }
+
     .link-progetto {
         font-size: 18px;
         padding: 10px 15px;
     }
+
     /* !section-4 */
-.form {
-    width: 60%;
-}
-/* !fine section-4 */
+    .form {
+        width: 60%;
+    }
+
+    /* !fine section-4 */
 }
 
 @media screen and (min-width: 601px) and (max-width: 768px) {
-    .menu{display: none;}
-    .testo > h1{
+    .menu {
+        display: none;
+    }
+
+    .testo>h1 {
         font-size: 38px;
         line-height: normal;
     }
-    .testo > p{
+
+    .testo>p {
         font-size: 18px;
     }
-    .home-span{
+
+    .home-span {
         font-size: 14px;
     }
-    .home-btn{
+
+    .home-btn {
         padding: 1rem 1.5rem;
     }
-    .img-persona{
+
+    .img-persona {
         width: 250px;
         height: 250px;
         border-radius: 100%;
-    
+
     }
-        /* fine home */
+
+    /* fine home */
 
 
-        .titolo-progetto {
-            font-size: 18px;
-        }
-        
-        .sottotitolo-progetto {
-            font-size: 12px;
-        }
-        .link-progetto {
-            font-size: 12px;
-            padding: 10px 15px;
-        }
-/* !section-4 */
-
-.form {
-    width: 40%;
-}
-/* !fine section-4 */
-}
-
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-    .testo > h1{
-        font-size: 40px;
-        line-height: normal;
-    }
-    .testo > p{
-        font-size: 20px;
-    }
-    .home-span{
-        font-size: 16px;
-    }
-    .img-persona{
-        width: 280px;
-        height: 280px;
-        border-radius: 100%;
-    
-    }
-     /* fine home */
-
-
-     .titolo-progetto {
+    .titolo-progetto {
         font-size: 18px;
     }
-    
+
     .sottotitolo-progetto {
         font-size: 12px;
     }
+
+    .link-progetto {
+        font-size: 12px;
+        padding: 10px 15px;
+    }
+
+    /* !section-4 */
+
+    .form {
+        width: 40%;
+    }
+
+    /* !fine section-4 */
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    .testo>h1 {
+        font-size: 40px;
+        line-height: normal;
+    }
+
+    .testo>p {
+        font-size: 20px;
+    }
+
+    .home-span {
+        font-size: 16px;
+    }
+
+    .img-persona {
+        width: 280px;
+        height: 280px;
+        border-radius: 100%;
+
+    }
+
+    /* fine home */
+
+
+    .titolo-progetto {
+        font-size: 18px;
+    }
+
+    .sottotitolo-progetto {
+        font-size: 12px;
+    }
+
     .link-progetto {
         font-size: 12px;
         padding: 10px 15px;
     }
 }
 
-@media screen and (min-width: 1025px) and (max-width: 1200px) {
-    
+@media screen and (min-width: 1025px) {
+    .wrap-grid {
+        margin-top: 80px;
+    }
 }
 
 /* !fine responsive */
