--- a/src/App.css
+++ b/src/App.css
@@ -172,128 +172,58 @@ h4, p {
 
 
 /* !section-2 */
-.section-2 {
-    width: 100%;
-    height: 100%;
-    margin: 100px auto;
-    display: flex;
-    justify-content: center;
+:root {
+    --tw-bg-opacity: 1;
+    --bordi-curvi: 12px;
+    --padding: 25px;
 }
 
 .section-2-progetti {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    /* grid-template-rows: 1fr ; */
-    gap: 50px;
-}
-
-.stile-progetti {
-    width: 100%;
-    display: flex;
+    justify-items: center;
     justify-content: center;
-    flex-wrap: wrap;
+    grid-template-columns: repeat(1, 1fr);
+    /* grid-template-rows: 1fr ; */
+    gap: 80px;
 }
 
-.progetto::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    width: 100%;
-    background-color: #131313;
-    opacity: 0;
-    height: 100%;
-    z-index: -1;
-}
-
-.progetto:hover::before {
-    opacity: 0.8;
-    z-index: 1;
-}
 
 .progetto {
-    margin: 10px;
-    background-color: #131313;
-    box-shadow: 0.2rem 0.2rem 0.5rem #555;
     position: relative;
-    overflow: hidden;
-    transition: all 1s;
-}
-
-.progetto:hover {
-    transform: scale(1.1);
-}
-
-.testo-progetto {
-    text-align: center;
-    letter-spacing: 5px;
-    position: absolute;
-    top: -100%;
-    transition: top 0.3s;
-    z-index: 10;
-}
-
-.progetto:hover .testo-progetto {
-    top: 30px;
-    transition: top 0.2s 0.2s;
-}
-
-.titolo-progetto {
-    font-size: 44px;
-    font-weight: 900;
-    color: var(--nero);
-    text-transform: capitalize;
-    color: white;
-    text-shadow: 1px 1px 2px black, 0 0 1em black, 0 0 0.2em black;
-}
-
-.sottotitolo-progetto {
-    font-size: 22px;
-    color: white;
-    text-shadow: 1px 1px 2px black;
+    background-color: rgb(219 219 219 / var(--tw-bg-opacity));
+    color: black;
+    padding-left: var(--padding);
+    padding-right: var(--padding);
+    border-radius: var(--bordi-curvi);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: end;
+    width: 100%;
+    max-width: 400px;
+    height: 400px;
 
 }
 
 .img-progetto {
-    width: auto;
-    background-size: cover;
-    transition: opacity 0.2s;
-    transition: blur 0.2s;
-
-}
-
-.progetto:hover .img-progetto {
-    opacity: 0.8;
-    filter: blur(0.2rem);
-}
-
-.link-progetto {
-    font-size: 28px;
-    font-weight: 700;
-    letter-spacing: 2px;
-    color: white;
-    text-shadow: 1px 1px 2px black;
-    border: solid 1px #222;
-    background: var(--rosso-scuro);
-    border-radius: 70px;
-    padding: 14px 28px;
     position: absolute;
-    bottom: -100%;
-    transition: all 0.2s;
+    top: -30px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80%;
+    height: auto;
+    border-radius: var(--bordi-curvi);
 
 }
 
-.progetto:hover .link-progetto {
-    bottom: 60px;
-    transition: bottom 0.2s 0.2s;
-    z-index: 10;
+.testo-progetto {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.link-progetto:hover {
-    background: var(--rosso);
-    transform: scale(1.2);
-    transition: all .52s cubic-bezier(.215, .61, .355, 1);
 
-}
+
 
 /* !fine section-2 */
 
@@ -452,11 +382,12 @@ h4, p {
     }
 
     .titolo-progetto {
-        font-size: 25px;
+        font-size: 24px;
     }
 
     .sottotitolo-progetto {
-        font-size: 18px;
+        font-size: 15px;
+        line-height: 1.3;
     }
 
     .link-progetto {
@@ -528,17 +459,15 @@ h4, p {
     }
 
     .titolo-progetto {
-        font-size: 28px;
+        font-size: 24px;
     }
 
     .sottotitolo-progetto {
-        font-size: 18px;
+        font-size: 15px;
+        line-height: 1.3;
     }
 
-    .link-progetto {
-        font-size: 18px;
-        padding: 10px 15px;
-    }
+
 
     /* !section-4 */
 
@@ -653,18 +582,7 @@ h4, p {
     /* fine home */
 
 
-    .titolo-progetto {
-        font-size: 18px;
-    }
 
-    .sottotitolo-progetto {
-        font-size: 12px;
-    }
-
-    .link-progetto {
-        font-size: 12px;
-        padding: 10px 15px;
-    }
 
     /* !section-4 */
 
@@ -699,24 +617,42 @@ h4, p {
     /* fine home */
 
 
-    .titolo-progetto {
-        font-size: 18px;
-    }
 
-    .sottotitolo-progetto {
-        font-size: 12px;
-    }
-
-    .link-progetto {
-        font-size: 12px;
-        padding: 10px 15px;
-    }
 }
 
-@media screen and (min-width: 1025px) {
+
+@media screen and (min-width: 1024px) {
+    .section-2-progetti {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
     .wrap-grid {
         margin-top: 80px;
     }
+
+    .testo-progetto {
+
+        opacity: 0;
+        transition: opacity 1s ease;
+
+    }
+
+    .progetto {
+        height: 200px;
+        transition: height 1s ease;
+
+    }
+
+    .progetto:hover .testo-progetto {
+        opacity: 1;
+
+    }
+
+    .progetto:hover {
+        height: 400px;
+
+    }
+
 }
 
 /* !fine responsive */
