--- a/src/App.css
+++ b/src/App.css
@@ -198,7 +198,7 @@ h4, p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
     width: 100%;
     max-width: 400px;
     height: 400px;
