--- a/src/App.css
+++ b/src/App.css
@@ -124,7 +124,7 @@ h4, p {
 
 .section-titolo {
     color: var(--nero);
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     letter-spacing: 8px;
     border-bottom: 2px solid var(--nero);
     text-shadow: 3px 3px 8px #555;
@@ -149,7 +149,7 @@ h4, p {
 
 .wrap-grid {
     display: grid;
-    gap: 20px;
+    /* gap: 20px; */
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
 
@@ -626,9 +626,6 @@ h4, p {
         grid-template-columns: repeat(2, 1fr);
     }
 
-    .wrap-grid {
-        margin-top: 80px;
-    }
 
     .testo-progetto {
 
