--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -38,7 +38,7 @@
 }
 
 .navbar-links {
-    font-size: 20px;
+    font-size: clamp(20px, 2.5vw, 24px);
     font-weight: 700;
     color: #fff;
     display: inline-flex;
