--- a/src/App.css
+++ b/src/App.css
@@ -100,13 +100,7 @@
     width: calc(100% - 48px);
 }
 
-.section-titolo {
-    color: var(--nero);
-    /* text-transform: uppercase; */
-    letter-spacing: 8px;
-    border-bottom: 2px solid var(--nero);
-    text-shadow: 3px 3px 8px #555;
-}
+
 
 /* root */
 :root {
@@ -130,13 +124,11 @@
 .wrap-grid {
     display: grid;
     /* gap: 20px; */
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-columns: 1fr;
 
 }
 
-.testo, .testo h1 {
-    font-weight: normal;
+.testo, .testo span {
     font-size: 32px;
 }
 
@@ -223,17 +215,26 @@
 }
 
 .link-dettagli-progetti {
-    font-family: ' Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 18px;
-    padding: 5px;
-    border-radius: var(--padding);
-    transition: background linear .5s;
+    position: relative;
 }
 
-.link-dettagli-progetti:hover {
-    background: var(--accent);
+.link-dettagli-progetti::after {
+    content: "";
+    width: 0px;
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    transition: all linear .5s;
+    border: 2px solid white;
 }
 
+.link-dettagli-progetti:hover::after {
+    width: 100%;
+    border: 2px solid var(--primary);
+    border-radius: 12px;
+}
 
 
 /* !fine section-2 */
@@ -258,12 +259,6 @@
     padding: 50px 0;
 }
 
-.titolo-section-4 {
-    color: white;
-    box-shadow: none;
-    border-color: white;
-
-}
 
 .form {
     width: 25%;
@@ -364,13 +359,7 @@
         align-items: center;
     }
 
-    .wrap-grid {
-        display: grid;
-        gap: 10px;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
 
-    }
 
     .img {
         justify-content: center;
@@ -408,9 +397,7 @@
 
     /* !section-4 */
 
-    .titolo-section-4 {
-        font-size: 36px;
-    }
+
 
     .form {
         width: 80%;
@@ -445,7 +432,6 @@
     .wrap-grid {
 
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
         gap: 20px;
     }
 
@@ -482,9 +468,7 @@
 
     /* !section-4 */
 
-    .titolo-section-4 {
-        font-size: 36px;
-    }
+
 
     .form {
         width: 70%;
@@ -637,8 +621,16 @@
         grid-template-columns: repeat(2, 1fr);
     }
 
+    .wrap-grid {
+        grid-template-columns: 1fr 1fr;
 
+    }
+}
 
+@media screen and (min-width: 1270px) {
+    .section-2-progetti {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 /* !fine responsive */
