Sistemato icone in dettaglio.jsx e aggiunta possibilità di click su card img nella sezione progetti

--- a/src/App.css
+++ b/src/App.css
@@ -186,7 +186,8 @@
 
 .img-progetto {
     width: 100%;
-    border-radius: var(--bordi-curvi);
+    border-top-left-radius: var(--bordi-curvi);
+    border-top-right-radius: var(--bordi-curvi);
 
 }
 
